Started restructuring nuclear stopping tables to improve code legibility and win some time on workspace reinitialization.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,7 +29,7 @@ add_executable(jabs main.c sample.c sample.h brick.c ion.c ion.h simulation.c si
         script_file.h calibration.c calibration.h script_generic.h prob_dist.c prob_dist.h
         idf2jbs.c idf2jbs.h idfelementparsers.c idfelementparsers.h idfparse.c idfparse.h
         "$<$<BOOL:${JABS_PLUGINS}>:plugin.c>"
-        )
+        nuclear_stopping.c nuclear_stopping.h)
 
 target_include_directories(jabs PRIVATE ${GETOPT_INCLUDE_DIR})
 
