Added a bit of DES table testing code to repository. It is only built if DEBUG_MODE is enabled.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,3 +46,7 @@ target_link_libraries(jabs
     )
 
 install(TARGETS jabs RUNTIME DESTINATION bin)
+
+if(DEBUG_MODE)
+add_subdirectory(des_table_test)
+endif()
