Cleanup, verbosity changes, also in GUI there is now selectable default verbosity (resets on every run). Bugfix: Plot window was still sometimes visible while fitting, even though plot while fitting was disabled.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,6 +53,8 @@ endif()
 
 install(TARGETS jabs RUNTIME DESTINATION bin)
 
-if(DEBUG_MODE)
-add_subdirectory(des_table_test)
+if(0)
+    if(DEBUG_MODE)
+        add_subdirectory(des_table_test)
+    endif()
 endif()
