Added our own function to clone gsl_histograms, because calibrations are not yet applied in some cases and range checks fail.

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -91,6 +91,7 @@ set(PROJECT_SOURCES
         ../src/simulation_workspace.c
         ../src/sim_reaction.c
         ../src/sim_calc_params.c
+        ../src/histogram.c
         "$<$<BOOL:${PLUGINS}>:plugin.c>"
        main.cpp
        mainwindow.cpp mainwindow.h mainwindow.ui
