Our own implementation of set/get functions of gsl vector/matrix. Should guarantee inline. DEBUG mode uses macros to fall back to GSL implementation.

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -92,6 +92,7 @@ set(PROJECT_SOURCES
         ../src/sim_reaction.c
         ../src/sim_calc_params.c
         ../src/histogram.c
+        ../src/gsl_inline.c
         "$<$<BOOL:${PLUGINS}>:plugin.c>"
        main.cpp
        mainwindow.cpp mainwindow.h mainwindow.ui
