--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -93,6 +93,7 @@ set(PROJECT_SOURCES
         ../src/sim_calc_params.c
         ../src/histogram.c
         ../src/gsl_inline.c
+        ../src/scatint.c
         "$<$<BOOL:${PLUGINS}>:plugin.c>"
        main.cpp
        mainwindow.cpp mainwindow.h mainwindow.ui
