Beginnings of IDF export support, adds a new command and generates an IDF file (XML). Most of the content of the file is missing at this stage.

--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -94,6 +94,7 @@ set(PROJECT_SOURCES
         ../src/histogram.c
         ../src/gsl_inline.c
         ../src/scatint.c
+        ../src/simulation2idf.c
         "$<$<BOOL:${PLUGINS}>:plugin.c>"
        main.cpp
        mainwindow.cpp mainwindow.h mainwindow.ui
