--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
 
     - name: Install libraries
       run: |
-        sudo apt-get install -y libgsl27 libgsl-dev libxml2 libxml2-dev libcups2
+        sudo apt-get install -y libgsl27 libgsl-dev libxml2 libxml2-dev cups libcups2
 
     - name: Obtain a copy of QCustomPlot
       run: |
