Add OpenMP_ROOT to GITHUB_ENV on macOS so that OpenMP installed with Homebrew can be found.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,7 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install gsl libxml2 libomp
+        echo "OpenMP_ROOT=\"/opt/homebrew/opt/libomp/\"" >> "$GITHUB_ENV"
 
     - name: Obtain files from outside the repository
       run: |
