Something is wrong.

--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -29,7 +29,9 @@ jobs:
         github-binarycache: true
 
     - name: Obtain files from outside the repository
-      run: get_external_files.bat
+      run: |
+      cd ${{runner.workspace}}
+      .\get_external_files.bat
 
     - name: Checkout JIBAL
       uses: actions/checkout@v4
