Maybe this does it.

--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -29,6 +29,7 @@ jobs:
         github-binarycache: true
 
     - name: Obtain files from outside the repository
+      shell: cmd
       run: |
         cd ${{runner.workspace}}
         .\get_external_files.bat
